test/errors/error38.base
A enum value with the name 'A' has already been declared at line 1, columns 5-6
enum y {
  A
  ^
